--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,6 @@ margin: 0;
 font-family: "quicksand";
 color: #333;
 }
-
 .navbar{
   padding: 20px;
   display: flex;
@@ -17,6 +16,20 @@ color: #333;
 .navbar h1{
   color:#f1356d;
 }
-.navbar a {
-
+.navbar . links {
+margin-left: auto;
 }
+. navbar a {
+  margin-left: 16px;
+  text-decoration: none;
+  padding: 6px;
+}
+.navbar a:hover{
+  color: #f1356d;
+ }
+ .content{
+   max-width: 600px;
+   margin: 40px auto;
+   padding: 20px;
+
+ }
