--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap');
 /*base styles*/
-{
+*{
 margin: 0;
 font-family: "quicksand";
 color: #333;
@@ -16,10 +16,10 @@ color: #333;
 .navbar h1{
   color:#f1356d;
 }
-.navbar . links {
+.navbar .links {
 margin-left: auto;
 }
-. navbar a {
+.navbar a {
   margin-left: 16px;
   text-decoration: none;
   padding: 6px;
